// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests for StandardRighthandCard component renders with title and help button 1`] = `
<ForwardRef(Grid)
  container={true}
>
  <ForwardRef(Grid)
    item={true}
    xs={true}
  >
    <ForwardRef(Typography)
      color="primary"
      component="div"
      variant="h6"
    >
      Title
    </ForwardRef(Typography)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
  >
    <Connect(HelpIcon)
      buttonLabel="OK"
      text="Some help text"
      title="Help text"
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Divider) />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  />
</ForwardRef(Grid)>
`;

exports[`Snapshot tests for StandardRighthandCard component renders with title and help button and some content 1`] = `
<ForwardRef(Grid)
  container={true}
>
  <ForwardRef(Grid)
    item={true}
    xs={true}
  >
    <ForwardRef(Typography)
      color="primary"
      component="div"
      variant="h6"
    >
      Title
    </ForwardRef(Typography)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
  >
    <Connect(HelpIcon)
      buttonLabel="OK"
      text="Some help text"
      title="Help text"
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Divider) />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    Some content
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`Snapshot tests for StandardRighthandCard component renders with title and no help icon 1`] = `
<ForwardRef(Grid)
  container={true}
>
  <ForwardRef(Grid)
    item={true}
    xs={true}
  >
    <ForwardRef(Typography)
      color="primary"
      component="div"
      variant="h6"
    >
      card title
    </ForwardRef(Typography)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Divider) />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  />
</ForwardRef(Grid)>
`;

exports[`Snapshot tests for StandardRighthandCard component renders with title, help button, testid and some content 1`] = `
<ForwardRef(Grid)
  container={true}
  data-testid="testid"
>
  <ForwardRef(Grid)
    item={true}
    xs={true}
  >
    <ForwardRef(Typography)
      color="primary"
      component="div"
      variant="h6"
    >
      Title
    </ForwardRef(Typography)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
  >
    <Connect(HelpIcon)
      buttonLabel="OK"
      text="Some help text"
      title="Help text"
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Divider) />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    Some content
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;
